force-app/main/default/objects/Invoice_Line_Item__c/fields/Cost_to_Deliver_Service__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Deliver_Service__c</fullName>
    <formula>Linked_Service_Item__r.Cost_to_Deliver_Service__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost to Deliver Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>