force-app/main/default/objects/Invoice_Line_Item__c/fields/Cycle_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Record_ID__c</fullName>
    <formula>Invoice__r.Cycle__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Record ID</label>
    <type>Text</type>
</CustomField>