force-app/main/default/objects/Invoice_Line_Item__c/fields/Linked_Service_Item__c.field-meta.xml
<CustomField>
    <fullName>Linked_Service_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Service Item</label>
    <referenceTo>Service_Item__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>