force-app/main/default/objects/Invoice_Line_Item__c/fields/Medicare_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Item_Number__c</fullName>
    <label>Medicare Item Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>