force-app/main/default/objects/Invoice_Line_Item__c/fields/Total_Line_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Price__c</fullName>
    <formula>( Quantity__c *  Price__c) + ((Quantity__c *  Price__c)* Tax_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Line Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>